@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 0.9975-1
-Date: 2006-09-28
+Date: 2006-09-29
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
