@@ -44,14 +44,17 @@ m[1:2, 4] <- 200
 m[, 1] <- -1
 m[1:3,]
 
+## testing operations on logical Matrices rather more than indexing:
 g10 <- m [ m > 10 ]
 stopifnot(18 == length(g10))
 stopifnot(10 == length(m[ m <= 10 ]))
-sel <- (20 < m) & (m < 150)
+sel <- (20 <  m) & (m <  150)
+nsel <-(20 >= m) | (m >= 150)
 (ssel <- as(sel, "sparseMatrix"))
 stopifnot(is(sel, "lMatrix"), is(ssel, "lsparseMatrix"),
-	  identical(  m[ ssel], as.matrix(m)[as.matrix( ssel)]),
-	  identical(  m[!ssel], as.matrix(m)[as.matrix(!ssel)])
+          identical3(!sel, !ssel, nsel), # !<sparse> is typically dense
+	  identical3(m[ sel],  m[ ssel], as.matrix(m)[as.matrix( ssel)]),
+	  identical3(m[!sel],  m[!ssel], as.matrix(m)[as.matrix(!ssel)])
 	  )
 
 ## more sparse Matrices --------------------------------------
