@@ -1,3 +1,13 @@
+2006-09-29  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/lsTMatrix.R: new files w/ missing methods
+	* R/nsTMatrix.R:  "  'for completeness'
+
+	* tests/Class+Meth.R: a bit less 'not.ok.classes'
+
+	* R/Tsparse.R (t): generalized "t" method from "dgT*" to "Tsparse*"
+
+
 2006-09-28  Douglas Bates  <bates@R-project.org>
 
 	* src/dppMatrix.h: Ensure definition of dspMatrix_validate is
